--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <title>Blockheads</title>
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="A limited collection of fully on-chain, gamified NFTs that push the limits of what is possible in an NFT smart contract" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Blockheads" />
+    <meta property="og:description" content="A limited collection of fully on-chain, gamified NFTs that push the limits of what is possible in an NFT smart contract" />
+    <meta property="og:image" content="https://www.blockheads.network/img/blockheadsmediasml.png" />
+    <meta property="og:url" content="https://www.blockheads.network" />
+    <meta property="og:site_name" content="Blockheads" />
+    <meta name="twitter:title" content="Blockheads">
+    <meta name="twitter:description" content="A limited collection of fully on-chain, gamified NFTs that push the limits of what is possible in an NFT smart contract">
+    <meta name="twitter:image" content="https://www.blockheads.network/img/blockheadsmediasml.png">
+    <meta name="twitter:site" content="@stillblockheads">
+    <meta name="twitter:creator" content="@stillblockheads">
     <link rel="shortcut icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
     <link rel="shortcut icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
     <script src="https://cdn.polyfill.io/v2/polyfill.js?features=es6"></script>
@@ -42,9 +54,9 @@
         (function (w, d, e, u, f, l, n) {
             w[f] = w[f] || function () {
                 (w[f].q = w[f].q || [])
-                .push(arguments);
+                    .push(arguments);
             }, l = d.createElement(e), l.async = 1, l.src = u,
-            n = d.getElementsByTagName(e)[0], n.parentNode.insertBefore(l, n);
+                n = d.getElementsByTagName(e)[0], n.parentNode.insertBefore(l, n);
         })
             (window, document, 'script', 'https://assets.mailerlite.com/js/universal.js', 'ml');
         ml('account', '77565');
@@ -54,5 +66,5 @@
 <body>
   <div id="elmish-app"></div>
   
-<script type="text/javascript" src="/vendors.c6cf070067e270c84b2b.js"></script><script type="text/javascript" src="/app.c6cf070067e270c84b2b.js"></script></body>
+<script type="text/javascript" src="/vendors.1b200b4ddd4e35a30ecc.js"></script><script type="text/javascript" src="/app.1b200b4ddd4e35a30ecc.js"></script></body>
 </html>
