--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Blockheads" />
     <meta property="og:description" content="A limited collection of fully on-chain, gamified NFTs that push the limits of what is possible in an NFT smart contract" />
-    <meta property="og:image" content="https://www.blockheads.network/img/blockheadmedia256.png" />
+    <meta property="og:image" itemprop="image" content="https://www.blockheads.network/img/blockheadmedia256.png" />
     <meta property="og:url" content="https://www.blockheads.network" />
     <meta property="og:site_name" content="Blockheads" />
     <meta name="twitter:title" content="Blockheads">
@@ -66,5 +66,5 @@
 <body>
   <div id="elmish-app"></div>
   
-<script type="text/javascript" src="/vendors.1b200b4ddd4e35a30ecc.js"></script><script type="text/javascript" src="/app.1b200b4ddd4e35a30ecc.js"></script></body>
+<script type="text/javascript" src="/vendors.2e069a9b184a530e8549.js"></script><script type="text/javascript" src="/app.2e069a9b184a530e8549.js"></script></body>
 </html>
