--- a/index.html
+++ b/index.html
@@ -62,9 +62,24 @@
         ml('account', '77565');
     </script>
     <!-- End MailerLite Universal -->
+    <!-- Matomo -->
+    <script>
+        var _paq = window._paq = window._paq || [];
+        /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+        _paq.push(['trackPageView']);
+        _paq.push(['enableLinkTracking']);
+        (function () {
+            var u = "https://blockheadsnetwork.matomo.cloud/";
+            _paq.push(['setTrackerUrl', u + 'matomo.php']);
+            _paq.push(['setSiteId', '1']);
+            var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
+            g.async = true; g.src = '//cdn.matomo.cloud/blockheadsnetwork.matomo.cloud/matomo.js'; s.parentNode.insertBefore(g, s);
+        })();
+    </script>
+    <!-- End Matomo Code -->
 <link href="/style.css" rel="stylesheet"></head>
 <body>
   <div id="elmish-app"></div>
   
-<script type="text/javascript" src="/vendors.fda92ff45f0fa2f38197.js"></script><script type="text/javascript" src="/app.fda92ff45f0fa2f38197.js"></script></body>
+<script type="text/javascript" src="/vendors.a7ef5db2e6a941fc8c82.js"></script><script type="text/javascript" src="/app.a7ef5db2e6a941fc8c82.js"></script></body>
 </html>
